<resources>
    <string name="app_name">maxApp</string>

    <string name="clients">Clientes</string>
    <string name="orders">Pedidos</string>
    <string name="sales_summary">Resumo de vendas</string>
    <string name="tools">Ferramentas</string>

    <string name="app_version">v.%1$s</string>

    <string name="data">Dados</string>
    <string name="order_history">Hist. de pedidos</string>
    <string name="license">Alvarás</string>

    <string name="client_data">Dados do cliente</string>
    <string name="client_id_social_name">%1$d - %2$s</string>
    <string name="client_cpf">CPF: %1$s</string>
    <string name="client_cnpj">CNPJ: %1$s</string>
    <string name="client_industry">Ramo de atividade: %1$s</string>
    <string name="client_address">Endereço: %1$s</string>

    <string name="contacts">Contatos</string>
    <string name="contact_phone">Telefone: %1$s</string>
    <string name="contact_cellphone">Celular: %1$s</string>
    <string name="contact_partner">Cônjuge: %1$s</string>
    <string name="contact_type">Tipo: %1$s</string>
    <string name="contact_hobbie">Hobbie: %1$s</string>
    <string name="contact_email">E-mail: %1$s</string>
    <string name="contact_borndate">Data Nasc.: %1$s</string>
    <string name="contact_partner_borndate">Data Nasc. Cônjuge: %1$s</string>
    <string name="contact_team">Time: %1$s</string>

    <string name="not_informed">Não informado</string>

    <string name="verify_client_status">Verificar status do cliente</string>
    <string name="client_status_active">%1$s - Status ativo</string>
    <string name="client_status_inactive">%1$s - Status inativo</string>

    <string name="search">Pesquisar</string>
    <string name="subtitles">Legendas</string>

    <string name="order_number_rca_erp">Nº Ped. RCA/ERP: %1$d / %2$s</string>
    <string name="order_client">Cliente: %1$s - %2$s</string>
    <string name="order_value">R$ %1$.2f</string>

    <string name="nothing_found">Nada foi encontrado</string>
    <string name="error_load_content">Erro ao carregar o conteúdo</string>
    <string name="try_again">Tente novamente</string>

    <string name="order_state_on_erp">Status do pedido no ERP</string>
    <string name="in_processing_by_fv">Em processamento por parte do FV</string>
    <string name="refused_by_erp">Pedido recusado pelo ERP</string>
    <string name="pending_on_erp">Posição no ERP Pendente</string>
    <string name="blocked_on_erp">Posição no ERP Bloqueado</string>
    <string name="released_on_erp">Posição no ERP Liberado</string>
    <string name="mounted_on_erp">Posição no ERP Montado</string>
    <string name="billed_on_erp">Posição no ERP Faturado</string>
    <string name="canceled_on_erp">Posição no ERP Cancelado</string>
    <string name="budget">Orçamento</string>
    <string name="review">Crítica</string>
    <string name="waiting_erp">Aguardando retorno do ERP</string>
    <string name="success">Sucesso</string>
    <string name="partial_failure">Falha parcial</string>
    <string name="total_failure">Falha total</string>
    <string name="order_was_cutted">Pedido sofreu corte</string>
    <string name="order_missing">Pedido com falta</string>
    <string name="order_canceled_on_erp">Pedido cancelado no ERP</string>
    <string name="order_with_return">Pedido com devolução</string>
    <string name="order_from_telemarketing">Pedido feito pelo Telemarketing</string>
    <string name="close">Fechar</string>

    <string name="empty_view_title">Nada encontrado…</string>
    <string name="empty_view_subtitle">"Não há alvarás para exibir,\nverifique com o responsável pelo ERP</string>
</resources>
