<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/santral_bold"
            android:text="@string/subtitles"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_state_on_erp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_processing"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/in_processing_by_fv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_refused"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/refused_by_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_pending"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/pending_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_blocked"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/blocked_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_released"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/released_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_mounted"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/mounted_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_billed"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/billed_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_canceled"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/canceled_on_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                layout="@layout/erp_status_budget"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/budget" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/review" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_maxima_aguardando_critica" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/waiting_erp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_maxima_critica_sucesso" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/success" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_maxima_critica_alerta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/partial_failure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_maxima_critica_falha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/santral_medium"
                android:text="@string/total_failure" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/subtitles" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_maxima_legenda_corte"
            android:drawablePadding="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_was_cutted" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_maxima_legenda_falta"
            android:drawablePadding="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_missing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_maxima_legenda_cancelamento"
            android:drawablePadding="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_canceled_on_erp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_maxima_legenda_devolucao"
            android:drawablePadding="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_with_return" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_maxima_legenda_telemarketing"
            android:drawablePadding="8dp"
            android:fontFamily="@font/santral_medium"
            android:text="@string/order_from_telemarketing" />
    </LinearLayout>
</ScrollView>