<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_history_dark_gray"
        android:fontFamily="@font/santral_medium"
        android:text="@string/nothing_found"
        android:textColor="#3E3E3E"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_error_outline_dark_gray"
            android:fontFamily="@font/santral_medium"
            android:gravity="center"
            android:text="@string/error_load_content"
            android:textColor="#3E3E3E" />

        <Button
            android:id="@+id/tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_green"
            android:padding="8dp"
            android:text="@string/try_again"
            android:textColor="#FFF" />
    </LinearLayout>
</RelativeLayout>