<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackgroundColor"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/clients"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_maxima_pessoas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/santral_bold"
                        android:text="@string/clients"
                        android:textColor="#232323"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/orders"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_maxima_pedido" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/santral_bold"
                        android:text="@string/orders"
                        android:textColor="#232323"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/ordersSummary"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_maxima_resumo_vendas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/santral_bold"
                        android:text="@string/sales_summary"
                        android:textColor="#232323"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tools"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_maxima_ferramentas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/santral_bold"
                        android:text="@string/tools"
                        android:textColor="#232323"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/santral_bolditalic"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/connectionState"
            android:layout_width="24dp"
            android:layout_height="24dp" />
    </LinearLayout>
</RelativeLayout>