<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="23dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_bold"
                android:text="@string/client_data"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:background="#C7C7C7" />

            <TextView
                android:id="@+id/clientIdAndSocialName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_bold"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/clientFantasyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_bold"
                android:textColor="#606060"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/clientCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_medium"
                android:textColor="#95989A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/clientCNPJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_medium"
                android:textColor="#95989A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/clientIndustry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_medium"
                android:textColor="#95989A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/clientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_medium"
                android:textColor="#95989A"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/santral_bold"
                android:text="@string/contacts"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:background="#C7C7C7" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contactRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_green"
        android:text="@string/verify_client_status"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</LinearLayout>